--- a/src/style.css
+++ b/src/style.css
@@ -331,3 +331,9 @@ a:focus {
     list-style-position: inside;
   }
 }
+
+img {
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(166, 173, 201, 0.2) !important;
+  border-radius: 10px;
+}
